Draft customization for personal use (removal of non-MIT-License copyright contents)

--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 info:
   # Blog Information
-  title:        "Will Koehler"
-  subtitle:     "Independent web developer living in Columbus, OH"
-  cover_image:  short-north-columbus-oh.jpg
-  cover_image_caption: "Short North, Columbus, OH. Photo: Pineapple XVI"
-  about_image:  goodale-park-columbus-oh.jpg
-  about_image_caption: "Goodale Park, Columbus, OH. Photo: Dave K."
-  logo:         logo.png
+  title:        "Mesbah Uddin" # "Will Koehler"
+  subtitle:     "Living a simple life" # "Independent web developer living in Columbus, OH"
+  cover_image:  zMU_TEST.JPG # short-north-columbus-oh.jpg
+  cover_image_caption: Somewhere in town # "Short North, Columbus, OH. Photo: Pineapple XVI"
+  about_image:  zMU_TEST.JPG # goodale-park-columbus-oh.jpg
+  about_image_caption: Somewhere in town # "Goodale Park, Columbus, OH. Photo: Dave K."
+  logo:         zMU_logo.png #logo.png
   
   # Social links
   # facebook:     sendtoinc
-  twitter:      wckoehler
-  github:       willkoehler
-  # gplus:        '101183822199340201470'
+  twitter:      MesbahUddin # wckoehler
+  github:       mesbah-uddin # willkoehler
+  # gplus:      #  '101183822199340201470'
   
   # Comments
   disqus:
     # Eg. "exampleblog" Set to false to disable comments
-    shortname:  koehlerblog
+    shortname:  # koehlerblog
   
   # Google Analytics tracking ID. Leave blank to disable tracking
-  google-analytics-id: 'UA-54124306-1'
+  google-analytics-id: #'UA-54124306-1'
   
   # Sharing settings
   sharing:
@@ -28,7 +28,7 @@ info:
     facebook:   true
     gplus:      false
     hn:         false
-    reddit:     true
+    reddit:     false # true
     
   # Google Fonts
   # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
@@ -37,7 +37,7 @@ info:
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
 # Root URL where the site will be published
-url:         http://willkoehler.net
+url:         http://mesbahuddin.org # http://willkoehler.net
 
 # host 0.0.0.0 allows us to access site via sapphire.local or localhost or 127.0.0.1
 host: 0.0.0.0
