--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ info:
   cover_image_caption: Somewhere in town # "Short North, Columbus, OH. Photo: Pineapple XVI"
   about_image:  zMU_TEST.JPG # goodale-park-columbus-oh.jpg
   about_image_caption: Somewhere in town # "Goodale Park, Columbus, OH. Photo: Dave K."
-  logo:         zMU_logo.png #logo.png
+  logo:         zMu_logo.png #logo.png
   
   # Social links
   # facebook:     sendtoinc
